fix(2606): remove commons-io dependency so the bundle resolves (webapp mounts)
The diagnostic OK/MISS probe showed org.apache.commons.io (and the already-
removed org.apache.commons.commons-fileupload) are absent in Polarion 2606. As a
mandatory Require-Bundle, the missing commons-io left the whole bundle unresolved
in OSGi, so the Eclipse extension registry skipped its plugin.xml and the editor
webapp was never mounted (HiveMind still read hivemodule.xml, so the admin-nav
entry still showed).

Replace the handful of trivial IOUtils calls (copy/toString/toByteArray) with
Java 21 built-ins (InputStream.readAllBytes / new String) in the shared service
and both servlet variants, and drop the commons-io / commons-fileupload
Require-Bundle and Maven dependencies. No external IO bundle to resolve.

Re-enable the Playwright suite to verify end-to-end.

https://claude.ai/code/session_013bg3ZruCkRyWXiLWM3tFH6